--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,26 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
+    background-color: #f9f9f9; /* Default background color */
     color: #333;
+}
+
+/* Set the background color for the entire page */
+body {
+    background-color: #424242; /* Your desired background color */
 }
 
 /* Header Styles */
 header {
     background-color: #000;
     color: #fff;
-    padding: 10px 0;
+    padding: 20px 0;
     text-align: center;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 2em;
 }
 
 /* Main Content Styles */
@@ -24,6 +34,7 @@ header {
     background-color: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
 /* Links Styles */
@@ -57,6 +68,6 @@ a:hover {
 footer {
     background-color: #f0f0f0;
     color: #666;
-    padding: 10px 0;
+    padding: 20px 0;
     text-align: center;
 }
