--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9; /* Default background color */
+    background-color: #424242; /* Default background color */
     color: #333;
 }
 
@@ -16,7 +16,6 @@ body {
 
 /* Header Styles */
 header {
-    background-color: #000;
     color: #fff;
     padding: 20px 0;
     text-align: center;
