--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 
 /* Header Styles */
 header {
-    background-color: #000;
+    background-color: #181818;
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -21,14 +21,15 @@ header {
 .main-content {
     width: 80%;
     margin: 20px auto;
-    background-color: #fff;
+    background-color: #000;
+    color: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Links Styles */
 a {
-    color: #007bff;
+    color: #fff;
     text-decoration: none;
 }
 
