--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,8 @@ a:hover {
 
 /* Footer Styles */
 footer {
-    background-color: #f0f0f0;
-    color: #666;
+    background-color: #181818;
+    color: #fff;
     padding: 10px 0;
     text-align: center;
 }
