--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,13 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #000;
+    background-color: #2C2C2C;
     color: #fff;
 }
 
 /* Header Styles */
 header {
-    background-color: #181818;
+    background-color: #424242;
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -21,7 +21,7 @@ header {
 .main-content {
     width: 80%;
     margin: 20px auto;
-    background-color: #000;
+    background-color: #2C2C2C;
     color: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -62,7 +62,7 @@ a:hover {
 
 /* Footer Styles */
 footer {
-    background-color: #181818;
+    background-color: #424242;
     color: #fff;
     padding: 10px 0;
     text-align: center;
