--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #2C2C2C;
+    background-color: #181818;
     color: #fff;
 }
 
@@ -21,7 +21,7 @@ header {
 .main-content {
     width: 80%;
     margin: 20px auto;
-    background-color: #2C2C2C;
+    background-color: #181818;
     color: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
